...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#007280CA">


            <Button
                android:id="@+id/addingBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add Stop"
                android:textAllCaps="false"
                app:layout_constraintEnd_toStartOf="@+id/nextPageButton"
                app:layout_constraintStart_toEndOf="@+id/myLocationButton"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/myLocationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.428"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/UserNumber"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:text="1"
            android:textColor="@color/indigo"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
...
            app:layout_constraintStart_toEndOf="@+id/users"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.428"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/decrementButton"
            android:layout_width="58dp"
            android:layout_height="47dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:onClick="Decrement"
            android:text="@string/decrement"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/incrementButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="MissingConstraints,UsingOnClickInXml" />

        <Button
            android:id="@+id/incrementButton"
...
