...
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_Menu"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_baseline_profile_24"
        android:title="@string/view_profile" />
    <item
        android:id="@+id/changePassword"
        android:icon="@drawable/ic_baseline_profile_24"
        android:title="@string/change_password" />

    <item
        android:id="@+id/journeyHistory"
        android:icon="@android:drawable/ic_menu_recent_history"
...
    <item
        android:id="@+id/faq"
        android:icon="@drawable/ic_baseline_help"
        android:title="@string/FAQ" />

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_baseline_logout"
        android:title="@string/log_out" />
</menu>
